welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: identifier expected but integer literal found.
		return 7:00
                         ^alarmClock:6: error: identifier expected but integer literal found.
		return 10:00
                          ^